--- a/app/views/dashboard/appearance.html.erb
+++ b/app/views/dashboard/appearance.html.erb
@@ -6,7 +6,7 @@
     %>
     <div>
     <div>
-     <%= image_tag(current_user.avatar) if current_user.avatar.attached? %>
+     <%= image_tag(current_user.avatar, class:"avatar-pic") if current_user.avatar.attached? %>
     </div>
     <div>
      <%= f.input :avatar, required: false, label: false %>
