FriendlyId gem added

--- a/app/views/dashboard/appearance.html.erb
+++ b/app/views/dashboard/appearance.html.erb
@@ -18,6 +18,7 @@
       <%= f.input :fullname, placeholder: "Your Full Name", label: false, required: false %>
     </div>
     <div>
+      <p> Only numbers and letters </p>
       <%= f.input :username, placeholder: "username", label: false, required: true %>
     </div>
     <div>
