--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -2,6 +2,7 @@
   <ul>
     <li><%= link_to "Dashboard",dashboard_path %></li>
     <li><%= link_to "Appearance", appearance_path %></li>
+    <li><%= link_to user_path(current_user.slug), user_path(current_user.slug), target:"_blank" %></li>
     <li><%= link_to "My Account", edit_user_registration_path %></li>
     <li><%= link_to "Logout", destroy_user_session_path, data:{turbo_method: 'delete'} %></li>
   </ul>
